force-app/main/default/objects/Viajes_individuales__c/Viajes_individuales__c.object-meta.xml
<CustomObject>
    <label>Viajes individuales</label>
    <nameField>
        <label>Viajes individuales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Viajes individuales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>