force-app/main/default/objects/Viajes_individuales__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Viajes individuales</relationshipLabel>
    <relationshipName>Viajes_individuales</relationshipName>
    <type>Lookup</type>
</CustomField>