force-app/main/default/objects/Viajes_individuales__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Viajes individuales</relationshipLabel>
    <relationshipName>Viajes_individuales</relationshipName>
    <type>Lookup</type>
</CustomField>