force-app/main/default/objects/Viajes_individuales__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Viaje Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincia</valueSetName>
    </valueSet>
</CustomField>