force-app/main/default/objects/Viajes_individuales__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehiculo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Viajes individuales</relationshipLabel>
    <relationshipName>Viajes_individuales</relationshipName>
    <type>Lookup</type>
</CustomField>